--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UFT-8">
         <tittle>Barberia Alura</tittle>
+        <link rel="stylesheet" href="style.css"
 
         <style>
-            p{text-align: center;
-            }
+           
         </style>
 </head>
 <body>
