--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
        
 </head>
+
 <body>
+
+    <img src="banner.jpg">
         <h1>Sobre a Barbearia Alura</h1>
 
         <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
