--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <img id=banner src="banner.jpg">
+
         <h1>Sobre a Barbearia Alura</h1>
 
         <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
@@ -20,5 +20,15 @@
 
         <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
         O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+
+        <h2>Benefícios</h2>
+
+         <ul>
+        *Atendimento  aos clientes 
+        *Espaço diferenciado
+        *Localização 
+        *Espaço diferenciado 
+         </ul>
+
     </body>
 </html> 
