--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <h2>Benefícios</h2>
 
          <ul>
-        *Atendimento  aos clientes 
-        *Espaço diferenciado
-        *Localização 
-        *Espaço diferenciado 
+        <li>*Atendimento  aos clientes </li>
+        <li>*Espaço diferenciado</li>
+        <li>*Localização </li>
+        <li>*Espaço diferenciado</li> 
          </ul>
 
     </body>
